<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#fce4ec"
    tools:context="com.example.android.citizenshipquiz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/visa"
                android:scaleType="fitXY"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/enter_name"
                android:id="@+id/enter_name"
                android:layout_marginTop="16dp"
                android:textSize="24dp"
                android:fontFamily="monospace"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_age"
                android:id="@+id/enter_age"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:fontFamily="monospace"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edu_level"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"/>
            
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/education_level">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_a"
                    android:id="@+id/el_answerA"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_b"
                    android:id="@+id/el_answerB"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_c"
                    android:id="@+id/el_answerC"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_d"
                    android:id="@+id/el_answerD"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eng_level"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/english_proficiency">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_lv_a"
                    android:id="@+id/ep_answerA"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_lv_b"
                    android:id="@+id/ep_answerB"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_lv_c"
                    android:id="@+id/ep_answerC"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_lv_d"
                    android:id="@+id/ep_answerD"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_offer"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/job_yes"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/job_no"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_level"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_level">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inc_lv_a"
                    android:id="@+id/il_AnswerA"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inc_lv_b"
                    android:id="@+id/il_AnswerB"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inc_lv_c"
                    android:id="@+id/il_AnswerC"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inc_lv_d"
                    android:id="@+id/il_AnswerD"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"/>
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit_button"
                android:onClick="checkAnswers"
                android:layout_marginTop="16dp"
                style= "@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="monospace"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/result_textView"
                android:layout_marginTop="16dp"
                android:hint="@string/def_message"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:onClick="resetQuiz"
                android:layout_marginTop="16dp"
                style= "@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="monospace"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
